tests/negative/runtime/runtime_overrides_int_main/input.ci
int main() {
    int[] values = [1];
    print(toString(values[1]) + "\n");
    return 42;
}
